# reanimation_tool

./: .clang-format  .clang-tidy  .editorconfig  .gitmodules  CMakeLists.txt  RCCppMainLoop.cpp  compile_commands.json  main.cpp
.cache/clangd/index/: AUArray.h.AF84DBCACD241EF8.idx  BuildTool.cpp.39DFCFA90391D96E.idx  BuildTool.h.7AC5B19009D615CB.idx  CompileOptions.h.76420EB2576B34BE.idx  Compiler.h.6B03E97FB2DA2388.idx  Compiler_PlatformWindows.cpp.9E2D6FFD99BBCE16.idx  FileChangeNotifier.cpp.15910BC6376C9E49.idx  FileChangeNotifier.h.258D63451F883B02.idx  FileSystemUtils.h.4FA57F1AD7B8C801.idx  FileWatcher.cpp.914B54A97FBC60C7.idx  FileWatcher.h.7E6515DF96ECECCD.idx  FileWatcherImpl.h.E0C00D3F26CDC4F8.idx  FileWatcherWin32.cpp.0C32BFED1DBCC7C4.idx  FileWatcherWin32.h.E6252A305A8BA4A5.idx  ICompilerLogger.h.F0A8BDF0EFA5C3F2.idx  IFileChangeNotifier.h.814C733EFC2D709B.idx  IObject.h.024ACF95B4185976.idx  IObjectFactorySystem.h.7044B08EE956C7B1.idx  IRuntimeObjectSystem.h.94EEA4F022DE879D.idx  ISimpleSerializer.h.0B1D1DA401A708E2.idx  Nuguri.cpp.3C5B83B969A06760.idx  Nuguri.h.C75F6B3087E474F6.idx  ObjectFactorySystem.cpp.DE14F8381475F484.idx  ObjectFactorySystem.h.905BBCF292DB26C7.idx  ObjectInterface.h.08E0A01C6988892E.idx  ObjectInterfacePerModule.h.4BB97C42A10A9FDC.idx  ObjectInterfacePerModuleSource.cpp.C0FA06D7692C096F.idx  RCCppMainLoop.cpp.38AFA052D746DC19.idx  RCCppMainLoop.h.2DFFC6B8398846BC.idx  RuntimeInclude.h.CC928522C3D31555.idx  RuntimeLinkLibrary.h.E9E0FDF1ABD46407.idx  RuntimeObjectSystem.cpp.E90B39C20B3656F2.idx  RuntimeObjectSystem.h.01664262EAEE2701.idx  RuntimeObjectSystem_PlatformWindows.cpp.1A3EE72808266CA3.idx  RuntimeProtector.h.89A33899D42A574B.idx  RuntimeSourceDependency.h.94B9E05389C60DA1.idx  RuntimeTracking.h.61A3232ECBBF7127.idx  SimpleSerializer.cpp.0FA6C90808E51BAA.idx  SimpleSerializer.h.C7838200AF2185CA.idx  StdioLogSystem.cpp.F28ED72B276248F1.idx  (+66 more)
Nuguri/src/: Nuguri.cpp  Nuguri.h
cmake/: clang-tidy.cmake
reanimation-ui/: reanimation_ui.cpp  reanimation_ui.h
